WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54991
Scrollbar::nativeTheme()->usesOverlayScrollbars() should not be consulted for CSS Scrollbars
https://bugs.webkit.org/show_bug.cgi?id=54991
Summary
Scrollbar::nativeTheme()->usesOverlayScrollbars() should not be consulted for...
Beth Dakin
Reported
2011-02-22 13:33:59 PST
Right now, to determine if there are overlay scrollbars, we always consult the native theme. This is not good because that is not relevant for RenderScrollbars (CSS Scrollbars). I have a fix. <
rdar://problem/9034318
>
Attachments
Patch
(10.60 KB, patch)
2011-02-22 14:01 PST
,
Beth Dakin
no flags
Details
Formatted Diff
Diff
Patch that hopefully doesn't break things
(10.61 KB, patch)
2011-02-22 14:12 PST
,
Beth Dakin
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2011-02-22 14:01:32 PST
Created
attachment 83381
[details]
Patch
WebKit Review Bot
Comment 2
2011-02-22 14:08:06 PST
Attachment 83381
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/7944405
Beth Dakin
Comment 3
2011-02-22 14:12:05 PST
Created
attachment 83384
[details]
Patch that hopefully doesn't break things
Beth Dakin
Comment 4
2011-02-22 14:29:15 PST
Thanks Sam! Fixed with revision 79360.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug