Source/WebCore/rendering/RenderScrollbar.h
@@ -60,6 +60,8 @@ public:
 
     int minimumThumbLength();
 
+    virtual bool isOverlayScrollbar() const { return false; }
+
 private:
     virtual void setParent(ScrollView*);
     virtual void setEnabled(bool);
